# bok_lang-rust

./: .gitignore  Cargo.toml  README.md  goorm.manifest  main  main.c  makefile  output.ir  output.ll  test.bs  test.rs
bok-parser/: Cargo.toml
bok-parser/src/: ast.rs  lib.rs  parser.rs
bok-tokenizer/: Cargo.toml
bok-tokenizer/src/: lib.rs  tokenizer.rs
bok-utils/: Cargo.toml
bok-utils/src/: buffer.rs  lib.rs
llvm-10.0.1/include/llvm/Config/: llvm-config.h
llvm-10.0.1/include/llvm/IR/: IntrinsicEnums.inc  (+8 more)
llvm-10.0.1/lib/: LLVM-C.lib  LLVMAArch64AsmParser.lib  LLVMAArch64Desc.lib  LLVMAArch64Disassembler.lib  LLVMAArch64Info.lib  LLVMAArch64Utils.lib  LLVMAMDGPUAsmParser.lib  LLVMAMDGPUDesc.lib  LLVMAMDGPUDisassembler.lib  LLVMAMDGPUInfo.lib  LLVMAMDGPUUtils.lib  LLVMARMAsmParser.lib  LLVMARMDesc.lib  LLVMARMDisassembler.lib  LLVMARMInfo.lib  LLVMARMUtils.lib  LLVMAggressiveInstCombine.lib  LLVMAsmParser.lib  LLVMBPFAsmParser.lib  LLVMBPFCodeGen.lib  LLVMBPFDesc.lib  LLVMBPFDisassembler.lib  LLVMBPFInfo.lib  LLVMBinaryFormat.lib  LLVMBitReader.lib  LLVMBitWriter.lib  LLVMBitstreamReader.lib  LLVMCFGuard.lib  LLVMCoroutines.lib  LLVMCoverage.lib  LLVMDWARFLinker.lib  LLVMDebugInfoCodeView.lib  LLVMDebugInfoDWARF.lib  LLVMDebugInfoGSYM.lib  LLVMDebugInfoMSF.lib  LLVMDemangle.lib  LLVMDlltoolDriver.lib  LLVMExecutionEngine.lib  LLVMExtensions.lib  LLVMFrontendOpenMP.lib  (+84 more)
src/: main.rs  parser.rs
src/generator/: generator.rs
src/parser/: ast.rs  mod.rs  parser.rs
src/tokenizer/: mod.rs  token.rs  tokenizer.rs
src/utils/: buffer.rs  mod.rs
(+3 files in other folders)
