[package]
name = "bok-parser"
version = "0.1.0"
authors = ["dksgusals99 <dksgusals99@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bok-utils = { path = "../bok-utils" }
bok-tokenizer = { path = "../bok-tokenizer" }